[gd_scene load_steps=11 format=2]

[ext_resource path="res://Numbers.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/m_font_regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/greater-than.png" type="Texture" id=4]
[ext_resource path="res://buttons/Buttons.tscn" type="PackedScene" id=5]
[ext_resource path="res://center.gd" type="Script" id=6]
[ext_resource path="res://assets/plus.png" type="Texture" id=7]
[ext_resource path="res://assets/less-than.png" type="Texture" id=8]
[ext_resource path="res://assets/minus.png" type="Texture" id=9]
[ext_resource path="res://assets/tilde.png" type="Texture" id=10]

[node name="Numbers" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sp" type="Control" parent="."]
margin_right = 416.0
margin_bottom = 1920.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 420.0
margin_right = 1500.0
margin_bottom = 1920.0
rect_min_size = Vector2( 1080, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 20
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBox"]
margin_right = 1080.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Numbers"
align = 1

[node name="Label" type="Label" parent="VBox"]
margin_top = 141.0
margin_right = 1080.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.54902, 0.54902, 0.54902, 1 )
text = "Match the  numbers"
autowrap = true

[node name="Gap" type="Control" parent="VBox"]
margin_top = 239.0
margin_right = 1080.0
margin_bottom = 259.0
rect_min_size = Vector2( 0, 20 )

[node name="NumGrid" type="GridContainer" parent="VBox"]
margin_top = 279.0
margin_right = 1080.0
margin_bottom = 455.0
custom_constants/vseparation = 20
columns = 2

[node name="Label" type="Label" parent="VBox/NumGrid"]
margin_right = 650.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "Decimal value:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dec" type="Label" parent="VBox/NumGrid"]
margin_left = 654.0
margin_right = 726.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "34"

[node name="vtext" type="Label" parent="VBox/NumGrid"]
margin_top = 98.0
margin_right = 650.0
margin_bottom = 176.0
rect_min_size = Vector2( 650, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Hexadecimal value:"

[node name="hbin" type="Label" parent="VBox/NumGrid"]
margin_left = 654.0
margin_top = 98.0
margin_right = 726.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "34"

[node name="Gap2" type="Control" parent="VBox"]
margin_top = 475.0
margin_right = 1080.0
margin_bottom = 495.0
rect_min_size = Vector2( 0, 20 )

[node name="Alert" type="Label" parent="VBox"]
margin_top = 515.0
margin_right = 1080.0
margin_bottom = 593.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap3" type="Control" parent="VBox"]
margin_top = 613.0
margin_right = 1080.0
margin_bottom = 633.0
rect_min_size = Vector2( 0, 20 )

[node name="Control" type="GridContainer" parent="VBox"]
margin_left = 190.0
margin_top = 653.0
margin_right = 890.0
margin_bottom = 1353.0
size_flags_horizontal = 4
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3

[node name="Sp" type="Control" parent="VBox/Control"]
margin_right = 200.0
margin_bottom = 200.0

[node name="Up" type="TextureButton" parent="VBox/Control"]
margin_left = 250.0
margin_right = 450.0
margin_bottom = 200.0
rect_min_size = Vector2( 44, 0 )
hint_tooltip = "Increment"
texture_normal = ExtResource( 7 )

[node name="Sp2" type="Control" parent="VBox/Control"]
margin_left = 500.0
margin_right = 700.0
margin_bottom = 200.0

[node name="ShiftLeft" type="TextureButton" parent="VBox/Control"]
margin_top = 250.0
margin_right = 200.0
margin_bottom = 450.0
hint_tooltip = "Bit shift left"
texture_normal = ExtResource( 8 )

[node name="Invert" type="TextureButton" parent="VBox/Control"]
margin_left = 250.0
margin_top = 250.0
margin_right = 450.0
margin_bottom = 450.0
rect_min_size = Vector2( 44, 0 )
hint_tooltip = "Invert"
texture_normal = ExtResource( 10 )

[node name="ShiftRight" type="TextureButton" parent="VBox/Control"]
margin_left = 500.0
margin_top = 250.0
margin_right = 700.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 100, 100 )
hint_tooltip = "Bit shift right"
texture_normal = ExtResource( 4 )

[node name="Sp3" type="Control" parent="VBox/Control"]
margin_top = 500.0
margin_right = 200.0
margin_bottom = 700.0

[node name="Down" type="TextureButton" parent="VBox/Control"]
margin_left = 250.0
margin_top = 500.0
margin_right = 450.0
margin_bottom = 700.0
rect_min_size = Vector2( 44, 0 )
hint_tooltip = "Decrement"
texture_normal = ExtResource( 9 )

[node name="Sp2" type="Control" parent="VBox"]
margin_top = 1373.0
margin_right = 1080.0
margin_bottom = 1660.0
size_flags_vertical = 3

[node name="Buttons" parent="VBox" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 1680.0
margin_right = 1080.0
margin_bottom = 1880.0
page_id = 1

[node name="Sp3" type="Control" parent="VBox"]
margin_top = 1900.0
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 0, 20 )

[node name="Sp3" type="Control" parent="."]
margin_left = 1504.0
margin_right = 1920.0
margin_bottom = 1920.0
size_flags_horizontal = 3

[node name="AlertTimer" type="Timer" parent="."]
one_shot = true
[connection signal="button_down" from="VBox/Control/Up" to="." method="_on_Up_button_down"]
[connection signal="button_down" from="VBox/Control/ShiftLeft" to="." method="_on_ShiftLeft_button_down"]
[connection signal="button_down" from="VBox/Control/Invert" to="." method="_on_Invert_button_down"]
[connection signal="button_down" from="VBox/Control/ShiftRight" to="." method="_on_ShiftRight_button_down"]
[connection signal="button_down" from="VBox/Control/Down" to="." method="_on_Down_button_down"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_Timer_timeout"]
